force-app/main/default/objects/FAQ__kav/fields/Attachment_1__c.field-meta.xml
<CustomField>
    <fullName>Attachment_1__c</fullName>
    <label>Attachment 1</label>
    <type>File</type>
</CustomField>