force-app/main/default/objects/FAQ__kav/fields/Attachment_2__c.field-meta.xml
<CustomField>
    <fullName>Attachment_2__c</fullName>
    <label>Attachment 2</label>
    <type>File</type>
</CustomField>