force-app/main/default/objects/FAQ__kav/fields/Attachment_3__c.field-meta.xml
<CustomField>
    <fullName>Attachment_3__c</fullName>
    <label>Attachment 3</label>
    <type>File</type>
</CustomField>