force-app/main/default/objects/FAQ__kav/fields/FS_Content_or_Procedure__c.field-meta.xml
<CustomField>
    <fullName>FS_Content_or_Procedure__c</fullName>
    <label>Content or Procedure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>