force-app/main/default/objects/FAQ__kav/recordTypes/FS_Best_Practice.recordType-meta.xml
<RecordType>
    <fullName>FS_Best_Practice</fullName>
    <active>true</active>
    <label>Best_Practice</label>
</RecordType>