force-app/main/default/objects/FAQ__kav/recordTypes/FS_Customer_Specific.recordType-meta.xml
<RecordType>
    <fullName>FS_Customer_Specific</fullName>
    <active>true</active>
    <label>Customer_Specific</label>
</RecordType>