force-app/main/default/objects/FAQ__kav/recordTypes/FS_Equipment_Type.recordType-meta.xml
<RecordType>
    <fullName>FS_Equipment_Type</fullName>
    <active>true</active>
    <label>Equipment_Type</label>
</RecordType>