force-app/main/default/objects/FAQ__kav/recordTypes/FS_FAQ.recordType-meta.xml
<RecordType>
    <fullName>FS_FAQ</fullName>
    <active>true</active>
    <label>FAQ</label>
</RecordType>