force-app/main/default/objects/FAQ__kav/recordTypes/FS_Generic.recordType-meta.xml
<RecordType>
    <fullName>FS_Generic</fullName>
    <active>true</active>
    <label>Generic</label>
</RecordType>