force-app/main/default/objects/FAQ__kav/recordTypes/FS_Policy.recordType-meta.xml
<RecordType>
    <fullName>FS_Policy</fullName>
    <active>true</active>
    <label>Policy</label>
</RecordType>